# server/docs/swagger.json
@@ -7,6 +7,39 @@
         "version": "1.0"
     },
     "paths": {
+        "/v1/forgot-password": {
+            "post": {
+                "description": "user forgot password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "parameters": [
+                    {
+                        "description": "forgot password body",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/repo_user.ForgotPasswordReqDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/config.ResDto"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/profile": {
             "get": {
                 "description": "user profile",
@@ -148,6 +181,14 @@
                 }
             }
         },
+        "repo_user.ForgotPasswordReqDto": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
         "repo_user.SignInReqDto": {
             "type": "object",
             "properties": {
@@ -169,7 +210,8 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 10
                 },
                 "username": {
                     "type": "string"
